resolvido problemas com a linkagem do footer.css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./assets/css/receitas.css">
     <link rel="stylesheet" href="./assets/css/quem_somos.css">
     <link rel="stylesheet" href="./assets/css/pessoas.css">
-    <link rel="stylesheet" href="../arquitetura css/assets/css/footer.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
 </head>
 <body>
     <header class="cabecalho">
