--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
     </section>
     <footer class="rodape">
-        contato:guilherme.santiago886@email.com.br
+        contato:guilherme.santiago886@gmail.com
     </footer>
 </body>
 </html>
