--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
     </section>
     <footer class="rodape">
-        contato:guilherme.santiago886@gmail.com
+       contato: <a href="mailto:guilherme.santiago886@gmail.com">guilherme.santiago886@gmail.com</a>
     </footer>
 </body>
 </html>
